@@ -18,7 +18,8 @@ public class GlobalMetricsConfiguration {
    @Deprecated(forRemoval = true, since = "16.0")
    public static final AttributeDefinition<Boolean> NAMES_AS_TAGS = AttributeDefinition.builder(org.infinispan.configuration.parsing.Attribute.NAMES_AS_TAGS, true).immutable().build();
    public static final AttributeDefinition<Boolean> ACCURATE_SIZE = AttributeDefinition.builder(org.infinispan.configuration.parsing.Attribute.ACCURATE_SIZE, false).build();
-   public static final AttributeDefinition<Boolean> JVM = AttributeDefinition.builder(org.infinispan.configuration.parsing.Attribute.JVM, true).build();
+   @Deprecated(forRemoval = true, since = "16.0")
+   public static final AttributeDefinition<Boolean> JVM = AttributeDefinition.builder(org.infinispan.configuration.parsing.Attribute.JVM, false).build();
    @Deprecated(forRemoval = true, since = "16.0")
    public static final AttributeDefinition<Boolean> LEGACY = AttributeDefinition.builder(org.infinispan.configuration.parsing.Attribute.LEGACY, true).build();
 
@@ -99,8 +100,8 @@ public class GlobalMetricsConfiguration {
 
    /**
     * Whether JVM metrics should be reported.
-    * @return
     */
+   @Deprecated(forRemoval = true, since = "16.0")
    public boolean jvm() {
       return jvm.get();
    }
